# kidario

./: .easignore  .gitignore
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/docs/: contracts.md
backend/kidario_backend.egg-info/: PKG-INFO  PKG-INFO 2  SOURCES.txt  requires.txt
backend/scripts/: backfill_booking_activity_plans.py  sync_pagarme_recipient.py
backend/sql/: 000_reset_public_schema.sql  001_init_profiles.sql  002_rls_profiles.sql  003_rls_validation.sql  004_init_bookings.sql  005_rls_bookings.sql  006_normalize_parent_children_gender.sql  007_init_chat.sql  008_rls_chat.sql  009_add_follow_up_objectives.sql  010_add_booking_activity_plans.sql  011_add_parent_cpf.sql  012_normalized_supabase_schema.sql  013_api_v2_cutover.sql  014_pagarme_psp_split.sql  015_teacher_payout_profile_kyc_fields.sql  016_fix_booking_child_parent_validation.sql  017_fix_chat_thread_booking_validation.sql  018_fix_chat_message_sender_validation.sql  019_disable_legacy_booking_payment_sync.sql  020_package_first_booking_request.sql  021_drop_parent_children_age.sql
backend/tests/: test_address_geocoding_service.py  test_admin_api.py  test_auth_api.py  test_auth_service_payload_parsing.py  test_booking_availability_slots_contract.py  test_booking_availability_time_parsing.py  test_booking_pagarme_split.py  test_bookings_api 2.py  test_bookings_api.py  test_explore_availability_time_parsing.py  test_health.py  test_marketplace_api.py  test_pagarme_service.py  test_payment_v2_service.py  test_profile_photo_service.py  (+12 more)
(+445 files in other folders)
